[gd_scene load_steps=2 format=3 uid="uid://hs4pjb72fc6p"]

[ext_resource type="Script" uid="uid://cll6mg6d6w4cg" path="res://Inventory/inventory_slot.gd" id="1_68pn2"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(50, 50)
script = ExtResource("1_68pn2")

[node name="ItemDisplay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemCount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ItemPopup" type="Panel" parent="."]
visible = false
top_level = true
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 56.0
offset_top = 13.0
offset_right = 106.0
offset_bottom = 88.0

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UseButton" type="Button" parent="ItemPopup/VBoxContainer"]
layout_mode = 2
text = "Use"

[node name="InfoButton" type="Button" parent="ItemPopup/VBoxContainer"]
layout_mode = 2
text = "Info"

[node name="DropButton" type="Button" parent="ItemPopup/VBoxContainer"]
layout_mode = 2
text = "Drop"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ItemPopup/VBoxContainer/UseButton" to="." method="use_item"]
